hphp/hack/test/typecheck/nonnull/gen_array_va_rec_nonnull.php
<?hh // strict

async function f(nonnull $x): Awaitable<void> {
  await gen_array_rec(tuple($x, $x));
}
